# argos3-ATTABOT

./: .gitignore  README.md
src/: CMakeLists.txt
src/cmake/: ARGoSPackaging.cmake  TargetAttabot.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/attabot/: CMakeLists.txt
src/plugins/robots/attabot/control_interface/: buzz_controller_attabot.cpp  buzz_controller_attabot.h  ci_attabot_camera_sensor.cpp  ci_attabot_camera_sensor.h  ci_attabot_encoder_sensor.cpp  ci_attabot_encoder_sensor.h  ci_attabot_ground_sensor.cpp  ci_attabot_ground_sensor.h  ci_attabot_lidar_sensor.cpp  ci_attabot_lidar_sensor.h  ci_attabot_light_sensor.cpp  ci_attabot_light_sensor.h  ci_attabot_proximity_sensor.cpp  ci_attabot_proximity_sensor.h  ci_attabot_ultrasound_sensor.cpp  ci_attabot_ultrasound_sensor.h
src/plugins/robots/attabot/real_robot/: battery.c  main.cpp  real_kheperaiv.cpp  real_kheperaiv.h  real_kheperaiv_battery_sensor.cpp  real_kheperaiv_battery_sensor.h  real_kheperaiv_camera_sensor.cpp  real_kheperaiv_camera_sensor.h  real_kheperaiv_device.cpp  real_kheperaiv_device.h  real_kheperaiv_differential_steering_actuator.cpp  real_kheperaiv_differential_steering_actuator.h  real_kheperaiv_differential_steering_device.cpp  real_kheperaiv_differential_steering_device.h  real_kheperaiv_encoder_sensor.cpp  real_kheperaiv_encoder_sensor.h  real_kheperaiv_gripper_actuator.cpp  real_kheperaiv_gripper_actuator.h  real_kheperaiv_ground_sensor.cpp  real_kheperaiv_ground_sensor.h  real_kheperaiv_leds_actuator.cpp  real_kheperaiv_leds_actuator.h  real_kheperaiv_lidar_sensor.cpp  real_kheperaiv_lidar_sensor.h  real_kheperaiv_proximity_sensor.cpp  real_kheperaiv_proximity_sensor.h  real_kheperaiv_ultrasound_sensor.cpp  real_kheperaiv_ultrasound_sensor.h
src/plugins/robots/attabot/simulator/: attabot_entity.cpp  attabot_entity.h  attabot_ground_rotzonly_sensor.cpp  attabot_ground_rotzonly_sensor.h  attabot_lidar_default_sensor.cpp  attabot_lidar_default_sensor.h  attabot_light_rotzonly_sensor.cpp  attabot_light_rotzonly_sensor.h  attabot_measures.cpp  attabot_measures.h  attabot_proximity_default_sensor.cpp  attabot_proximity_default_sensor.h  attabot_ultrasound_default_sensor.cpp  attabot_ultrasound_default_sensor.h  dynamics2d_attabot_model.cpp  dynamics2d_attabot_model.h  qtopengl_attabot.cpp  qtopengl_attabot.h
